--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.24.7",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "@chromatic-com/storybook": "^3.2.3",
     "@cypress/grep": "^4.0.1",
     "@cypress/skip-test": "^2.6.1",
     "@emotion/babel-plugin": "^11.11.0",
@@ -151,6 +152,14 @@
     "@rspack/core": "^1.1.6",
     "@rspack/plugin-react-refresh": "^1.0.1",
     "@sinonjs/fake-timers": "^9.1.2",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-onboarding": "^8.4.7",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-webpack5": "^8.4.7",
+    "@storybook/test": "^8.4.7",
     "@svgr/webpack": "^8.0.1",
     "@swc/core": "^1.7.0",
     "@swc/plugin-emotion": "^3.0.10",
@@ -296,6 +305,7 @@
     "semver": "^7.6.3",
     "shadow-cljs": "^2.28.12",
     "source-map-loader": "^4.0.1",
+    "storybook": "^8.4.7",
     "stylelint": "^16.2.1",
     "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-standard": "^36.0.0",
@@ -355,7 +365,7 @@
     "build-static-viz:watch": "webpack --config webpack.static-viz.config.js --watch",
     "build-static-viz:watch-wait": "yarn wait:cljs; yarn build-static-viz:watch",
     "build-stats": "yarn && webpack --json > stats.json",
-    "build-storybook": "NODE_ENV=development yarn build:cljs && NODE_OPTIONS=--max-old-space-size=8196 build-storybook",
+    "build-storybook": "storybook build",
     "build-storybook-embedding-sdk": "NODE_OPTIONS=--max-old-space-size=8196 IS_EMBEDDING_SDK=true build-storybook -c .storybook-sdk --quiet",
     "build-watch": "yarn concurrently -n 'cljs,js' 'yarn build-watch:cljs' 'yarn build-watch:js'",
     "build-watch:cljs": "yarn && shadow-cljs watch app",
@@ -405,7 +415,7 @@
     "prepare": "husky install",
     "prettier": "prettier --write '{frontend,enterprise/frontend,e2e}/**/*.{js,jsx,ts,tsx,css}'",
     "remove-webpack-cache": "rm -rf ./node_modules/.cache",
-    "storybook": "yarn build:cljs && start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
     "storybook-embedding-sdk": "yarn build:cljs && IS_EMBEDDING_SDK=true start-storybook -c .storybook-sdk -p 6006",
     "test": "yarn test-unit && yarn test-timezones && yarn test-cypress",
     "test-cljs": "yarn && shadow-cljs compile test && node target/node-tests.js",
