--- a/package.json
+++ b/package.json
@@ -152,14 +152,19 @@
     "@rspack/core": "^1.1.6",
     "@rspack/plugin-react-refresh": "^1.0.1",
     "@sinonjs/fake-timers": "^9.1.2",
+    "@storybook/addon-a11y": "^8.4.7",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
     "@storybook/addon-onboarding": "^8.4.7",
+    "@storybook/addon-styling-webpack": "^1.0.1",
+    "@storybook/addon-themes": "^8.4.7",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
     "@storybook/blocks": "^8.4.7",
     "@storybook/react": "^8.4.7",
     "@storybook/react-webpack5": "^8.4.7",
     "@storybook/test": "^8.4.7",
+    "@storybook/testing-library": "^0.2.2",
     "@svgr/webpack": "^8.0.1",
     "@swc/core": "^1.7.0",
     "@swc/plugin-emotion": "^3.0.10",
@@ -306,6 +311,7 @@
     "shadow-cljs": "^2.28.12",
     "source-map-loader": "^4.0.1",
     "storybook": "^8.4.7",
+    "storybook-addon-pseudo-states": "3.1.1",
     "stylelint": "^16.2.1",
     "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-standard": "^36.0.0",
